# dio-bootcamp-TDD

./: Makefile  docker-compose.yaml  main.py  pyproject.toml
src/: exceptions.py  routers.py
src/controllers/: product.py
src/core/: config.py
src/models/: base.py
src/schemas/: base.py  filters.py  product.py
src/usecases/: product.py
tests/: conftest.py
tests/controllers/: test_products.py
tests/schemas/: test_product.py
tests/usecases/: test_products.py
