[tool.poetry]
name = "tdd"
version = "0.1.0"
description = ""
authors = ["Andre Luiz Branco Barbosa Araujo <andreluizpsn975@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
